parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DOC_COMMENT

Grammar

Rule 0     S' -> programa
Rule 1     programa -> importaciones instrucciones
Rule 2     programa -> instrucciones
Rule 3     instrucciones -> sentencias
Rule 4     instrucciones -> sentencias instrucciones
Rule 5     importaciones -> import
Rule 6     importaciones -> import importaciones
Rule 7     import -> IMPORT STRING SEMICOLON
Rule 8     sentencias -> asignar_variable
Rule 9     sentencias -> funcion
Rule 10    sentencias -> class
Rule 11    sentencias_funcion -> asignar_variable
Rule 12    sentencias_funcion -> cambiar_variable
Rule 13    sentencias_funcion -> impresion
Rule 14    sentencias_funcion -> condicional
Rule 15    sentencias_funcion -> retorno
Rule 16    sentencias_funcion -> while
Rule 17    sentencias_funcion -> do_while
Rule 18    sentencias_funcion -> for
Rule 19    sentencias_funcion -> for_each
Rule 20    sentencias_funcion -> invocacion
Rule 21    cuerpo_funcion -> sentencias_funcion
Rule 22    cuerpo_funcion -> sentencias_funcion cuerpo_funcion
Rule 23    sentencias_clase -> asignar_variable
Rule 24    sentencias_clase -> cambiar_variable
Rule 25    sentencias_clase -> funcion
Rule 26    sentencias_clase -> constructor
Rule 27    sentencias_clase -> funcion_static
Rule 28    cuerpo_clase -> sentencias_clase
Rule 29    cuerpo_clase -> sentencias_clase cuerpo_clase
Rule 30    class -> CLASS VARIABLE LKEY cuerpo_clase RKEY
Rule 31    invocacion -> getVariable LPAREN element_list RPAREN SEMICOLON
Rule 32    invocacion -> getVariable LPAREN RPAREN SEMICOLON
Rule 33    invocar -> getVariable LPAREN element_list RPAREN
Rule 34    invocar -> getVariable LPAREN RPAREN
Rule 35    constructor -> VARIABLE LPAREN atributo_list RPAREN SEMICOLON
Rule 36    atributo_list -> THIS DOT VARIABLE
Rule 37    atributo_list -> THIS DOT VARIABLE COMA atributo_list
Rule 38    funcion -> tipo_dato VARIABLE LPAREN parametros RPAREN LKEY cuerpo_funcion RKEY
Rule 39    funcion -> tipo_dato VARIABLE LPAREN RPAREN LKEY cuerpo_funcion RKEY
Rule 40    funcion_static -> STATIC tipo_dato VARIABLE LPAREN parametros RPAREN LKEY cuerpo_funcion RKEY
Rule 41    funcion_static -> STATIC tipo_dato VARIABLE LPAREN RPAREN LKEY cuerpo_funcion RKEY
Rule 42    variables -> VARIABLE
Rule 43    variables -> variable_indexada
Rule 44    getVariable -> variables
Rule 45    getVariable -> variables DOT getVariable
Rule 46    asignar_variable -> tipo_dato variables asignador expresion SEMICOLON
Rule 47    asignar_variable -> tipo_dato variables SEMICOLON
Rule 48    asignar_variable -> FINAL_TYPE tipo_dato variables asignador expresion SEMICOLON
Rule 49    asignar_variable -> FINAL_TYPE tipo_dato variables SEMICOLON
Rule 50    cambiar_variable -> variables modificador SEMICOLON
Rule 51    cambiar_variable -> variables asignador expresion SEMICOLON
Rule 52    modificador -> INCREMENT_VAR
Rule 53    modificador -> DECREMENT_VAR
Rule 54    asignador -> ASSIGN
Rule 55    asignador -> PLUS_ASSIGN
Rule 56    asignador -> MINUS_ASSIGN
Rule 57    asignador -> TIMES_ASSIGN
Rule 58    asignador -> DIVIDE_ASSIGN
Rule 59    asignador -> MODULO_ASSIGN
Rule 60    expresion -> operacion
Rule 61    expresion -> comparacion
Rule 62    expresion -> list
Rule 63    expresion -> diccionario
Rule 64    expresion -> set
Rule 65    expresion -> input
Rule 66    expresion -> invocar
Rule 67    retorno -> RETURN SEMICOLON
Rule 68    retorno -> RETURN expresion SEMICOLON
Rule 69    variable_indexada -> VARIABLE LBRACKETS inmutables RBRACKETS
Rule 70    impresion -> PRINT LPAREN operacion RPAREN SEMICOLON
Rule 71    impresion -> PRINT LPAREN comparacion_logica RPAREN SEMICOLON
Rule 72    impresion -> PRINT LPAREN RPAREN SEMICOLON
Rule 73    input -> STDIN DOT READLINESYNC LPAREN RPAREN
Rule 74    elemento -> INT
Rule 75    elemento -> DOUBLE
Rule 76    elemento -> STRING
Rule 77    elemento -> BOOLEAN
Rule 78    elemento -> getVariable
Rule 79    comparacion -> operacion comparador operacion
Rule 80    comparacion_logica -> comparacion
Rule 81    comparacion_logica -> comparacion operador_logico comparacion_logica
Rule 82    operador_logico -> AND
Rule 83    operador_logico -> OR
Rule 84    operador_logico -> NOT
Rule 85    comparador -> EQUALITY
Rule 86    comparador -> INEQUALITY
Rule 87    comparador -> GREATER_THAN
Rule 88    comparador -> LESS_THAN
Rule 89    comparador -> GREATER_EQ_THAN
Rule 90    comparador -> LESS_EQ_THAN
Rule 91    operacion -> elemento
Rule 92    operacion -> elemento operador operacion
Rule 93    operador -> PLUS
Rule 94    operador -> MINUS
Rule 95    operador -> TIMES
Rule 96    operador -> DIVIDE
Rule 97    operador -> MODULO
Rule 98    list -> LBRACKETS element_list RBRACKETS
Rule 99    list -> LBRACKETS RBRACKETS
Rule 100   element_list -> elemento
Rule 101   element_list -> elemento COMA element_list
Rule 102   tipo_dato -> VOID
Rule 103   tipo_dato -> VARIABLE
Rule 104   tipo_dato -> FINAL_TYPE
Rule 105   tipo_dato -> CONST_TYPE
Rule 106   tipo_dato -> VAR_TYPE
Rule 107   tipo_dato -> INT_TYPE
Rule 108   tipo_dato -> STRING_TYPE
Rule 109   tipo_dato -> DOUBLE_TYPE
Rule 110   tipo_dato -> BOOL_TYPE
Rule 111   tipo_dato -> LIST LESS_THAN tipo_coleccion GREATER_THAN
Rule 112   tipo_dato -> MAP LESS_THAN tipo_coleccion COMA tipo_coleccion GREATER_THAN
Rule 113   tipo_dato -> SET LESS_THAN tipo_coleccion GREATER_THAN
Rule 114   tipo_coleccion -> INT_TYPE
Rule 115   tipo_coleccion -> STRING_TYPE
Rule 116   tipo_coleccion -> DOUBLE_TYPE
Rule 117   tipo_coleccion -> FINAL_TYPE
Rule 118   tipo_coleccion -> CONST_TYPE
Rule 119   tipo_coleccion -> VAR_TYPE
Rule 120   tipo_coleccion -> BOOL_TYPE
Rule 121   for -> FOR LPAREN asignar_variable comparacion_logica SEMICOLON VARIABLE modificador RPAREN LKEY cuerpo_funcion RKEY
Rule 122   for -> FOR LPAREN SEMICOLON comparacion_logica SEMICOLON VARIABLE modificador RPAREN LKEY cuerpo_funcion RKEY
Rule 123   for -> FOR LPAREN SEMICOLON SEMICOLON VARIABLE modificador RPAREN LKEY cuerpo_funcion RKEY
Rule 124   for_each -> FOR LPAREN tipo_dato VARIABLE IN getVariable RPAREN LKEY cuerpo_funcion RKEY
Rule 125   for_each -> FOR LPAREN tipo_dato VARIABLE LPAREN specific_instance RPAREN IN VARIABLE RPAREN LKEY cuerpo_funcion RKEY
Rule 126   specific_instance -> DOS_PUNTOS VARIABLE
Rule 127   specific_instance -> DOS_PUNTOS VARIABLE COMA specific_instance
Rule 128   while -> WHILE LPAREN condiciones RPAREN LKEY cuerpo_funcion RKEY
Rule 129   while -> WHILE LPAREN condiciones RPAREN LKEY RKEY
Rule 130   do_while -> DO LKEY cuerpo_funcion RKEY WHILE LPAREN condiciones RPAREN SEMICOLON
Rule 131   condiciones -> comparacion_logica
Rule 132   condiciones -> getVariable
Rule 133   condiciones -> BOOLEAN
Rule 134   condiciones -> invocar
Rule 135   inmutables -> STRING
Rule 136   inmutables -> INT
Rule 137   inmutables -> DOUBLE
Rule 138   key_element -> inmutables DOS_PUNTOS elemento
Rule 139   key_element_list -> key_element
Rule 140   key_element_list -> key_element COMA key_element_list
Rule 141   diccionario -> LKEY key_element_list RKEY
Rule 142   diccionario -> LKEY RKEY
Rule 143   diccionario -> DICT LPAREN RPAREN
Rule 144   set -> LKEY element_list RKEY
Rule 145   set -> CONJUNTO LPAREN RPAREN
Rule 146   condicional -> IF LPAREN condiciones RPAREN LKEY cuerpo_funcion RKEY bloques_else
Rule 147   condicional -> IF LPAREN condiciones RPAREN LKEY cuerpo_funcion RKEY
Rule 148   condicional -> IF LPAREN condiciones RPAREN LKEY RKEY
Rule 149   condicional -> IF LPAREN condiciones RPAREN LKEY RKEY bloques_else
Rule 150   bloques_else -> ELSE IF LPAREN condiciones RPAREN LKEY cuerpo_funcion RKEY bloques_else
Rule 151   bloques_else -> ELSE LKEY cuerpo_funcion RKEY
Rule 152   parametros -> tipo_dato VARIABLE
Rule 153   parametros -> tipo_dato VARIABLE COMA parametros

Terminals, with rules where they appear

AND                  : 82
ASSIGN               : 54
BOOLEAN              : 77 133
BOOL_TYPE            : 110 120
CLASS                : 30
COMA                 : 37 101 112 127 140 153
COMMENT              : 
CONJUNTO             : 145
CONST_TYPE           : 105 118
DECREMENT_VAR        : 53
DICT                 : 143
DIVIDE               : 96
DIVIDE_ASSIGN        : 58
DO                   : 130
DOC_COMMENT          : 
DOS_PUNTOS           : 126 127 138
DOT                  : 36 37 45 73
DOUBLE               : 75 137
DOUBLE_TYPE          : 109 116
ELSE                 : 150 151
EQUALITY             : 85
FINAL_TYPE           : 48 49 104 117
FOR                  : 121 122 123 124 125
GREATER_EQ_THAN      : 89
GREATER_THAN         : 87 111 112 113
IF                   : 146 147 148 149 150
IMPORT               : 7
IN                   : 124 125
INCREMENT_VAR        : 52
INEQUALITY           : 86
INT                  : 74 136
INT_TYPE             : 107 114
LBRACKETS            : 69 98 99
LESS_EQ_THAN         : 90
LESS_THAN            : 88 111 112 113
LIST                 : 111
LKEY                 : 30 38 39 40 41 121 122 123 124 125 128 129 130 141 142 144 146 147 148 149 150 151
LPAREN               : 31 32 33 34 35 38 39 40 41 70 71 72 73 121 122 123 124 125 125 128 129 130 143 145 146 147 148 149 150
MAP                  : 112
MINUS                : 94
MINUS_ASSIGN         : 56
MODULO               : 97
MODULO_ASSIGN        : 59
NOT                  : 84
OR                   : 83
PLUS                 : 93
PLUS_ASSIGN          : 55
PRINT                : 70 71 72
RBRACKETS            : 69 98 99
READLINESYNC         : 73
RETURN               : 67 68
RKEY                 : 30 38 39 40 41 121 122 123 124 125 128 129 130 141 142 144 146 147 148 149 150 151
RPAREN               : 31 32 33 34 35 38 39 40 41 70 71 72 73 121 122 123 124 125 125 128 129 130 143 145 146 147 148 149 150
SEMICOLON            : 7 31 32 35 46 47 48 49 50 51 67 68 70 71 72 121 122 122 123 123 130
SET                  : 113
STATIC               : 40 41
STDIN                : 73
STRING               : 7 76 135
STRING_TYPE          : 108 115
THIS                 : 36 37
TIMES                : 95
TIMES_ASSIGN         : 57
VARIABLE             : 30 35 36 37 38 39 40 41 42 69 103 121 122 123 124 125 125 126 127 152 153
VAR_TYPE             : 106 119
VOID                 : 102
WHILE                : 128 129 130
error                : 

Nonterminals, with rules where they appear

asignador            : 46 48 51
asignar_variable     : 8 11 23 121
atributo_list        : 35 37
bloques_else         : 146 149 150
cambiar_variable     : 12 24
class                : 10
comparacion          : 61 80 81
comparacion_logica   : 71 81 121 122 131
comparador           : 79
condicional          : 14
condiciones          : 128 129 130 146 147 148 149 150
constructor          : 26
cuerpo_clase         : 29 30
cuerpo_funcion       : 22 38 39 40 41 121 122 123 124 125 128 130 146 147 150 151
diccionario          : 63
do_while             : 17
element_list         : 31 33 98 101 144
elemento             : 91 92 100 101 138
expresion            : 46 48 51 68
for                  : 18
for_each             : 19
funcion              : 9 25
funcion_static       : 27
getVariable          : 31 32 33 34 45 78 124 132
import               : 5 6
importaciones        : 1 6
impresion            : 13
inmutables           : 69 138
input                : 65
instrucciones        : 1 2 4
invocacion           : 20
invocar              : 66 134
key_element          : 139 140
key_element_list     : 140 141
list                 : 62
modificador          : 50 121 122 123
operacion            : 60 70 79 79 92
operador             : 92
operador_logico      : 81
parametros           : 38 40 153
programa             : 0
retorno              : 15
sentencias           : 3 4
sentencias_clase     : 28 29
sentencias_funcion   : 21 22
set                  : 64
specific_instance    : 125 127
tipo_coleccion       : 111 112 112 113
tipo_dato            : 38 39 40 41 46 47 48 49 124 125 152 153
variable_indexada    : 43
variables            : 44 45 46 47 48 49 50 51
while                : 16

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . importaciones instrucciones
    (2) programa -> . instrucciones
    (5) importaciones -> . import
    (6) importaciones -> . import importaciones
    (3) instrucciones -> . sentencias
    (4) instrucciones -> . sentencias instrucciones
    (7) import -> . IMPORT STRING SEMICOLON
    (8) sentencias -> . asignar_variable
    (9) sentencias -> . funcion
    (10) sentencias -> . class
    (46) asignar_variable -> . tipo_dato variables asignador expresion SEMICOLON
    (47) asignar_variable -> . tipo_dato variables SEMICOLON
    (48) asignar_variable -> . FINAL_TYPE tipo_dato variables asignador expresion SEMICOLON
    (49) asignar_variable -> . FINAL_TYPE tipo_dato variables SEMICOLON
    (38) funcion -> . tipo_dato VARIABLE LPAREN parametros RPAREN LKEY cuerpo_funcion RKEY
    (39) funcion -> . tipo_dato VARIABLE LPAREN RPAREN LKEY cuerpo_funcion RKEY
    (30) class -> . CLASS VARIABLE LKEY cuerpo_clase RKEY
    (102) tipo_dato -> . VOID
    (103) tipo_dato -> . VARIABLE
    (104) tipo_dato -> . FINAL_TYPE
    (105) tipo_dato -> . CONST_TYPE
    (106) tipo_dato -> . VAR_TYPE
    (107) tipo_dato -> . INT_TYPE
    (108) tipo_dato -> . STRING_TYPE
    (109) tipo_dato -> . DOUBLE_TYPE
    (110) tipo_dato -> . BOOL_TYPE
    (111) tipo_dato -> . LIST LESS_THAN tipo_coleccion GREATER_THAN
    (112) tipo_dato -> . MAP LESS_THAN tipo_coleccion COMA tipo_coleccion GREATER_THAN
    (113) tipo_dato -> . SET LESS_THAN tipo_coleccion GREATER_THAN

    IMPORT          shift and go to state 6
    FINAL_TYPE      shift and go to state 11
    CLASS           shift and go to state 13
    VOID            shift and go to state 14
    VARIABLE        shift and go to state 12
    CONST_TYPE      shift and go to state 15
    VAR_TYPE        shift and go to state 16
    INT_TYPE        shift and go to state 17
    STRING_TYPE     shift and go to state 18
    DOUBLE_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    LIST            shift and go to state 21
    MAP             shift and go to state 22
    SET             shift and go to state 23

    programa                       shift and go to state 1
    importaciones                  shift and go to state 2
    instrucciones                  shift and go to state 3
    import                         shift and go to state 4
    sentencias                     shift and go to state 5
    asignar_variable               shift and go to state 7
    funcion                        shift and go to state 8
    class                          shift and go to state 9
    tipo_dato                      shift and go to state 10

state 1

    (0) S' -> programa .



state 2

    (1) programa -> importaciones . instrucciones
    (3) instrucciones -> . sentencias
    (4) instrucciones -> . sentencias instrucciones
    (8) sentencias -> . asignar_variable
    (9) sentencias -> . funcion
    (10) sentencias -> . class
    (46) asignar_variable -> . tipo_dato variables asignador expresion SEMICOLON
    (47) asignar_variable -> . tipo_dato variables SEMICOLON
    (48) asignar_variable -> . FINAL_TYPE tipo_dato variables asignador expresion SEMICOLON
    (49) asignar_variable -> . FINAL_TYPE tipo_dato variables SEMICOLON
    (38) funcion -> . tipo_dato VARIABLE LPAREN parametros RPAREN LKEY cuerpo_funcion RKEY
    (39) funcion -> . tipo_dato VARIABLE LPAREN RPAREN LKEY cuerpo_funcion RKEY
    (30) class -> . CLASS VARIABLE LKEY cuerpo_clase RKEY
    (102) tipo_dato -> . VOID
    (103) tipo_dato -> . VARIABLE
    (104) tipo_dato -> . FINAL_TYPE
    (105) tipo_dato -> . CONST_TYPE
    (106) tipo_dato -> . VAR_TYPE
    (107) tipo_dato -> . INT_TYPE
    (108) tipo_dato -> . STRING_TYPE
    (109) tipo_dato -> . DOUBLE_TYPE
    (110) tipo_dato -> . BOOL_TYPE
    (111) tipo_dato -> . LIST LESS_THAN tipo_coleccion GREATER_THAN
    (112) tipo_dato -> . MAP LESS_THAN tipo_coleccion COMA tipo_coleccion GREATER_THAN
    (113) tipo_dato -> . SET LESS_THAN tipo_coleccion GREATER_THAN

    FINAL_TYPE      shift and go to state 11
    CLASS           shift and go to state 13
    VOID            shift and go to state 14
    VARIABLE        shift and go to state 12
    CONST_TYPE      shift and go to state 15
    VAR_TYPE        shift and go to state 16
    INT_TYPE        shift and go to state 17
    STRING_TYPE     shift and go to state 18
    DOUBLE_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    LIST            shift and go to state 21
    MAP             shift and go to state 22
    SET             shift and go to state 23

    instrucciones                  shift and go to state 24
    sentencias                     shift and go to state 5
    asignar_variable               shift and go to state 7
    funcion                        shift and go to state 8
    class                          shift and go to state 9
    tipo_dato                      shift and go to state 10

state 3

    (2) programa -> instrucciones .

    $end            reduce using rule 2 (programa -> instrucciones .)


state 4

    (5) importaciones -> import .
    (6) importaciones -> import . importaciones
    (5) importaciones -> . import
    (6) importaciones -> . import importaciones
    (7) import -> . IMPORT STRING SEMICOLON

    FINAL_TYPE      reduce using rule 5 (importaciones -> import .)
    CLASS           reduce using rule 5 (importaciones -> import .)
    VOID            reduce using rule 5 (importaciones -> import .)
    VARIABLE        reduce using rule 5 (importaciones -> import .)
    CONST_TYPE      reduce using rule 5 (importaciones -> import .)
    VAR_TYPE        reduce using rule 5 (importaciones -> import .)
    INT_TYPE        reduce using rule 5 (importaciones -> import .)
    STRING_TYPE     reduce using rule 5 (importaciones -> import .)
    DOUBLE_TYPE     reduce using rule 5 (importaciones -> import .)
    BOOL_TYPE       reduce using rule 5 (importaciones -> import .)
    LIST            reduce using rule 5 (importaciones -> import .)
    MAP             reduce using rule 5 (importaciones -> import .)
    SET             reduce using rule 5 (importaciones -> import .)
    IMPORT          shift and go to state 6

    import                         shift and go to state 4
    importaciones                  shift and go to state 25

state 5

    (3) instrucciones -> sentencias .
    (4) instrucciones -> sentencias . instrucciones
    (3) instrucciones -> . sentencias
    (4) instrucciones -> . sentencias instrucciones
    (8) sentencias -> . asignar_variable
    (9) sentencias -> . funcion
    (10) sentencias -> . class
    (46) asignar_variable -> . tipo_dato variables asignador expresion SEMICOLON
    (47) asignar_variable -> . tipo_dato variables SEMICOLON
    (48) asignar_variable -> . FINAL_TYPE tipo_dato variables asignador expresion SEMICOLON
    (49) asignar_variable -> . FINAL_TYPE tipo_dato variables SEMICOLON
    (38) funcion -> . tipo_dato VARIABLE LPAREN parametros RPAREN LKEY cuerpo_funcion RKEY
    (39) funcion -> . tipo_dato VARIABLE LPAREN RPAREN LKEY cuerpo_funcion RKEY
    (30) class -> . CLASS VARIABLE LKEY cuerpo_clase RKEY
    (102) tipo_dato -> . VOID
    (103) tipo_dato -> . VARIABLE
    (104) tipo_dato -> . FINAL_TYPE
    (105) tipo_dato -> . CONST_TYPE
    (106) tipo_dato -> . VAR_TYPE
    (107) tipo_dato -> . INT_TYPE
    (108) tipo_dato -> . STRING_TYPE
    (109) tipo_dato -> . DOUBLE_TYPE
    (110) tipo_dato -> . BOOL_TYPE
    (111) tipo_dato -> . LIST LESS_THAN tipo_coleccion GREATER_THAN
    (112) tipo_dato -> . MAP LESS_THAN tipo_coleccion COMA tipo_coleccion GREATER_THAN
    (113) tipo_dato -> . SET LESS_THAN tipo_coleccion GREATER_THAN

    $end            reduce using rule 3 (instrucciones -> sentencias .)
    FINAL_TYPE      shift and go to state 11
    CLASS           shift and go to state 13
    VOID            shift and go to state 14
    VARIABLE        shift and go to state 12
    CONST_TYPE      shift and go to state 15
    VAR_TYPE        shift and go to state 16
    INT_TYPE        shift and go to state 17
    STRING_TYPE     shift and go to state 18
    DOUBLE_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    LIST            shift and go to state 21
    MAP             shift and go to state 22
    SET             shift and go to state 23

    sentencias                     shift and go to state 5
    instrucciones                  shift and go to state 26
    asignar_variable               shift and go to state 7
    funcion                        shift and go to state 8
    class                          shift and go to state 9
    tipo_dato                      shift and go to state 10

state 6

    (7) import -> IMPORT . STRING SEMICOLON

    STRING          shift and go to state 27


state 7

    (8) sentencias -> asignar_variable .

    FINAL_TYPE      reduce using rule 8 (sentencias -> asignar_variable .)
    CLASS           reduce using rule 8 (sentencias -> asignar_variable .)
    VOID            reduce using rule 8 (sentencias -> asignar_variable .)
    VARIABLE        reduce using rule 8 (sentencias -> asignar_variable .)
    CONST_TYPE      reduce using rule 8 (sentencias -> asignar_variable .)
    VAR_TYPE        reduce using rule 8 (sentencias -> asignar_variable .)
    INT_TYPE        reduce using rule 8 (sentencias -> asignar_variable .)
    STRING_TYPE     reduce using rule 8 (sentencias -> asignar_variable .)
    DOUBLE_TYPE     reduce using rule 8 (sentencias -> asignar_variable .)
    BOOL_TYPE       reduce using rule 8 (sentencias -> asignar_variable .)
    LIST            reduce using rule 8 (sentencias -> asignar_variable .)
    MAP             reduce using rule 8 (sentencias -> asignar_variable .)
    SET             reduce using rule 8 (sentencias -> asignar_variable .)
    $end            reduce using rule 8 (sentencias -> asignar_variable .)


state 8

    (9) sentencias -> funcion .
